# security-compliance-lakehouse

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  framework-sync.yml
agent-skills/: FRAMEWORK_SKILLS.md
agent-skills/ai-governance-analyst/: SKILL.md
agent-skills/ai-governance-analyst/references/: sources.md
agent-skills/compliance-analytics/: SKILL.md
agent-skills/iso27001-isms-analyst/: SKILL.md
agent-skills/iso27001-isms-analyst/references/: sources.md
agent-skills/pci-dss-analyst/: SKILL.md
agent-skills/pci-dss-analyst/references/: sources.md
agent-skills/security-operations-analyst/: SKILL.md
agent-skills/soc2-control-analyst/: SKILL.md
agent-skills/soc2-control-analyst/references/: sources.md
app/: README.md
app/web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/web/src/app/: globals.css  layout.tsx  providers.tsx
app/web/src/components/: ApiHealthBanner.tsx  AuditorBanner.tsx  PageHeader.tsx  Placeholder.tsx  TagChip.tsx  Toolbar.tsx
app/web/src/lib/: utils.ts  workspace.ts
connectors/: catalog.json
controls/: catalog.json
data/raw/: security_events.jsonl
data/schemas/: current-posture.schema.json  evidence-freshness.schema.json  normalized-event.schema.json  raw-security-event.schema.json  violation.schema.json
deploy/: README.md
deploy/clickhouse/: docker-compose.yml  schema.sql
deploy/eks-terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
deploy/helm/trustops/: .helmignore  Chart.yaml  values.yaml
deploy/helm/trustops/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  scheduler-cronjob.yaml  service.yaml  serviceaccount.yaml
deploy/snowflake/: schema.sql
docs/: ARCHITECTURE.md  CONNECTORS.md  DATA_FLOW.md  DATA_MODEL.md  FRAMEWORK_COVERAGE.md  HERO_DATA_LAKES.md  INTERNAL_COMPLIANCE_TOOL.md  PILOT_ROADMAP.md  PRODUCT_ARTIFACTS.md  PRODUCT_WALKTHROUGH.md  REPO_AUDIT.md  REPO_GOVERNANCE_CONNECTOR.md  SERVER_AUTH.md  THIRD_PARTY_ASSETS.md  USE_CASE_VENDOR_DILIGENCE.md  VISUAL_SYSTEM.md
docs/api/: AGENT_API.md
docs/architecture/: COMPONENTS.md
docs/diagrams/: agent-workflow.md  architecture.md  ascii-system-map.md  data-model.md  dual-lakehouse.md  evaluation-lifecycle.md  hosting.md
docs/images/frameworks/: README.md
frameworks/: registry.json
mappings/: control_articles.json  control_map.json
mockup_companies/: README.md
mockup_companies/ai_lab/raw/: security_events.jsonl
mockup_companies/fintech/raw/: security_events.jsonl
mockup_companies/healthcare/raw/: security_events.jsonl
mockup_companies/saas/raw/: security_events.jsonl
programs/: catalog.json
src/security_lakehouse/: __init__.py  api_legacy.py  api_v1.py  assessment.py  audit_log.py  catalog.py  cli.py  connector_runner.py  connector_state.py  connectors.py  controls.py  dashboard.py  evidence_freshness.py  fixtures.py  framework_coverage.py  framework_detail.py  framework_provenance.py  framework_sync.py  graph.py  io.py  mappings.py  models.py  pipeline.py  policy.py  programs.py  readiness.py  repo_audit.py  repo_governance.py  scheduler.py  server.py  server_app.py  tenancy.py  tracking.py  trust_share.py  validation.py  verification.py  workflows.py
src/security_lakehouse/auth/: __init__.py  dependencies.py  oidc.py  rbac.py  request_audit.py  saml.py  sessions.py  tokens.py
src/security_lakehouse/db/: __init__.py  base.py  metrics.py  migrate.py  models.py  remediation.py  repository.py  tags.py
src/security_lakehouse/migrations/: env.py
src/security_lakehouse/migrations/versions/: 0001_baseline.py  0002_api_keys.py  0003_user_sessions.py  (+3 more)
src/security_lakehouse/web/: __init__.py
tests/: test_api_legacy.py  test_api_v1.py  test_auth_rbac.py  test_connector_runner.py  test_connector_state.py  test_db.py  test_evidence_freshness.py  test_framework_coverage.py  test_framework_detail.py  test_graph_fixtures.py  test_headless.py  test_mappings.py  test_metrics.py  test_pipeline.py  test_policy.py  test_remediation.py  test_repo_audit.py  test_repo_governance.py  test_repo_hygiene.py  test_server_app.py  test_sso_sessions.py  test_stream.py  test_sync_scheduler_readiness.py  test_tags.py  test_tenant_isolation.py  test_tracking.py  test_web_dist.py  test_workflow_validation.py  test_workflows.py
tests/fixtures/github-governance/: branch_protection.json  collaborators.json  repo.json  teams.json  workflow_permissions.json
tools/: api_smoke.py  validate_ci_artifacts.py
(+56 files in other folders)
