[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustops-security-data-lake"
version = "0.1.0"
description = "Continuous compliance assessment for security data lakes."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mohamed Saad" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
analytics = [
    "duckdb>=1.0",
]

[project.scripts]
security-lakehouse = "security_lakehouse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"security_lakehouse" = [
    "web/dist/**/*",
    "web/dist/.gitkeep",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
