[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustops-security-data-lake"
version = "0.1.0"
description = "Continuous compliance assessment for security data lakes."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mohamed Saad" }]
dependencies = []

[project.optional-dependencies]
# Server mode: the ASGI platform surface for auth, multi-tenancy, and live
# connectors. Local mode stays zero-dependency (`pip install trustops`).
server = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
dev = [
    "jsonschema>=4.23",
    "pytest>=8.0",
    "ruff>=0.8.0",
    # supply-chain scan + pre-commit driver
    "pip-audit>=2.7",
    "pre-commit>=3.7",
    "commitizen>=3.27",
    # server-mode parity tests
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
]
analytics = [
    "duckdb>=1.0",
]

# Conventional commits — used by the pre-commit `commitizen` hook to
# validate every commit message format.
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
tag_format = "v$version"

[project.scripts]
security-lakehouse = "security_lakehouse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"security_lakehouse" = [
    "web/dist/**/*",
    "web/dist/.gitkeep",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
